--- a/src/main/resources/datasource.bak.properties
+++ b/src/main/resources/datasource.bak.properties
@@ -1,6 +1,6 @@
 db.driverLocation=C:\\Users\\Choel\\.m2\repository\\mysql\\mysql-connector-java\\5.1.47\\mysql-connector-java-5.1.47.jar
-db.url=jdbc:mysql://localhost:3306/cpc?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true
 db.driverClassName=com.mysql.jdbc.Driver
+db.url=jdbc:mysql://localhost:3306/cpc?characterEncoding=utf-8
 db.username=root
 db.password=Wuc14561013?
 db.initialSize=20
